gobmkida/c3/tune_move_ordering
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4854:12: error: expected expression
*( _OWORD *)defend_lib_score = *( _OWORD *)params; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4854:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)defend_lib_score = *( _OWORD *)params; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4856:12: error: expected expression
*( _OWORD *)defend_capture_score = *( _OWORD *)( params + 11); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4856:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)defend_capture_score = *( _OWORD *)( params + 11); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4858:12: error: expected expression
*( _OWORD *)defend_atari_score = *( _OWORD *)( params + 17); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4858:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)defend_atari_score = *( _OWORD *)( params + 17); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4860:12: error: expected expression
*( _OWORD *)defend_save_score = *( _OWORD *)( params + 23); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4860:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)defend_save_score = *( _OWORD *)( params + 23); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4862:12: error: expected expression
*( _OWORD *)attack_string_lib_score = *( _OWORD *)( params + 39); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4862:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)attack_string_lib_score = *( _OWORD *)( params + 39); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4863:12: error: expected expression
*( _OWORD *)attack_capture_score = *( _OWORD *)( params + 45); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4863:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)attack_capture_score = *( _OWORD *)( params + 45); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4865:12: error: expected expression
*( _OWORD *)attack_save_score = *( _OWORD *)( params + 51); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4865:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)attack_save_score = *( _OWORD *)( params + 51); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4867:12: error: expected expression
*( _OWORD *)defend_not_adjacent_lib_score = *( _OWORD *)( params + 6); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4867:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)defend_not_adjacent_lib_score = *( _OWORD *)( params + 6); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4868:12: error: expected expression
*( _OWORD *)defend_open_score = *( _OWORD *)( params + 29); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4868:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)defend_open_score = *( _OWORD *)( params + 29); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4869:12: error: expected expression
*( _OWORD *)attack_own_lib_score = *( _OWORD *)( params + 34); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4869:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)attack_own_lib_score = *( _OWORD *)( params + 34); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4870:12: error: expected expression
*( _OWORD *)attack_open_score = *( _OWORD *)( params + 57); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/engine/reading.c:4870:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)attack_open_score = *( _OWORD *)( params + 57); 
   ^
22 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tune_move_ordering/src/obj/1/reading.o] Error 1
